lang/tests/compile_fail/event_tuple_struct.rs
use quasar_lang::prelude::*;

#[event(discriminator = [1])]
pub struct Bad(u64);

fn main() {}
