lang/tests/compile_fail/event_tuple_struct.stderr
error: #[event] requires named fields
 --> tests/compile_fail/event_tuple_struct.rs:4:1
  |
4 | pub struct Bad(u64);
  | ^^^^^^^^^^^^^^^^^^^^
